--- a/index.html
+++ b/index.html
@@ -274,8 +274,10 @@
             </div>
 
             <div class="bg-secondary/30 p-4 rounded-xl border border-white/5">
-                <label class="text-xs text-muted block uppercase tracking-wide mb-2">Descripción</label>
-                <p class="text-foreground/90 leading-relaxed" id="drawer-desc">Descripción del pedido.</p>
+                <label class="text-xs text-muted block uppercase tracking-wide mb-2">Artículos del Pedido</label>
+                <div id="drawer-items-list" class="space-y-3 mb-3">
+                    <!-- Items injected by JS -->
+                </div>
                 <div id="drawer-urgent" class="mt-3 flex items-center text-warning text-sm font-medium hidden">
                     <i data-lucide="alert-triangle" class="w-4 h-4 mr-2"></i> Pedido Urgente
                 </div>
@@ -377,31 +379,50 @@
                 </div>
 
                 <!-- Product Selection -->
-                <div>
-                    <label class="text-xs font-semibold text-muted uppercase tracking-wider mb-1">Producto</label>
-                    <div class="relative">
-                        <select id="new-product" onchange="updateProductOptions()"
-                            class="w-full bg-secondary/50 border border-white/10 rounded-lg p-2.5 text-foreground focus:outline-none focus:border-primary transition-colors appearance-none cursor-pointer">
-                            <option value="" disabled selected>Selecciona...</option>
-                            <option value="bouquet_vino">Bouquet & Vino</option>
-                            <option value="palomitas">Palomitas</option>
-                            <option value="brownie">Brownies 4pz</option>
-                            <option value="pretzels">Pretzels</option>
-                            <option value="paquete_mini">Paquete "Mini"</option>
-                        </select>
-                        <i data-lucide="chevron-down"
-                            class="absolute right-3 top-1/2 -translate-y-1/2 w-4 h-4 text-muted pointer-events-none"></i>
-                    </div>
-                </div>
+                <div class="space-y-4">
+                    <div class="bg-black/20 p-4 rounded-lg border border-white/5">
+                        <label class="text-xs font-semibold text-muted uppercase tracking-wider mb-2 block">Añadir
+                            Artículos</label>
+                        <div class="space-y-4">
+                            <div class="relative">
+                                <select id="new-product" onchange="updateProductOptions()"
+                                    class="w-full bg-secondary/50 border border-white/10 rounded-lg p-2.5 text-foreground focus:outline-none focus:border-primary transition-colors appearance-none cursor-pointer">
+                                    <option value="" disabled selected>Selecciona producto...</option>
+                                    <option value="bouquet_vino">Bouquet & Vino</option>
+                                    <option value="palomitas">Palomitas</option>
+                                    <option value="brownie">Brownies 4pz</option>
+                                    <option value="pretzels">Pretzels</option>
+                                    <option value="paquete_mini">Paquete "Mini"</option>
+                                </select>
+                                <i data-lucide="chevron-down"
+                                    class="absolute right-3 top-1/2 -translate-y-1/2 w-4 h-4 text-muted pointer-events-none"></i>
+                            </div>
 
-                <!-- Dynamic Options Area -->
-                <div id="dynamic-options" class="hidden">
-                    <!-- Injected by JS -->
+                            <!-- Dynamic Options Area -->
+                            <div id="dynamic-options" class="hidden">
+                                <!-- Injected by JS -->
+                            </div>
+
+                            <button onclick="addItemsToList()"
+                                class="w-full py-2.5 bg-secondary text-primary border border-primary/20 hover:bg-primary/10 rounded-lg font-bold transition-all flex items-center justify-center gap-2">
+                                <i data-lucide="plus-circle" class="w-4 h-4"></i> Añadir Artículo
+                            </button>
+                        </div>
+                    </div>
+
+                    <!-- Items Added List -->
+                    <div id="added-items-container" class="hidden space-y-3">
+                        <label class="text-xs font-semibold text-muted uppercase tracking-wider block">Artículos
+                            Agregados</label>
+                        <div id="added-items-list" class="space-y-2">
+                            <!-- Injected by JS -->
+                        </div>
+                    </div>
                 </div>
 
                 <!-- Total Display -->
                 <div class="bg-secondary/30 p-4 rounded-xl border border-white/5 flex justify-between items-center">
-                    <span class="text-muted font-medium">Total Estimado</span>
+                    <span class="text-muted font-medium">Total Acumulado</span>
                     <span id="new-total" class="text-xl font-bold text-primary">$0.00</span>
                 </div>
             </div>
@@ -643,7 +664,7 @@
                     </div>
                 </div>
                 <p class="text-xs text-muted/80 line-clamp-2 mb-3 pointer-events-none">
-                    ${order.description}
+                    ${order.items ? order.items.map(i => `${i.quantity}x ${i.name}`).join(', ') : order.description}
                 </p>
                 <div class="space-y-1.5 pointer-events-none">
                     <div class="flex justify-between text-xs">
@@ -757,7 +778,30 @@
             document.getElementById('drawer-id').textContent = `ID: #${order.id}`;
             document.getElementById('drawer-client').textContent = order.customerName;
             document.getElementById('drawer-time').textContent = order.deliveryTime;
-            document.getElementById('drawer-desc').textContent = order.description;
+
+            // Render Items List in Drawer
+            const itemsListEl = document.getElementById('drawer-items-list');
+            itemsListEl.innerHTML = '';
+
+            if (order.items && order.items.length > 0) {
+                order.items.forEach(item => {
+                    const itemEl = document.createElement('div');
+                    itemEl.className = 'flex justify-between items-start bg-white/5 p-2.5 rounded-lg border border-white/5';
+                    itemEl.innerHTML = `
+                        <div class="flex-1">
+                            <div class="text-sm font-medium text-foreground">${item.name}</div>
+                            <div class="text-[10px] text-muted uppercase tracking-wider">${item.details}</div>
+                        </div>
+                        <div class="text-right">
+                            <div class="text-xs font-bold text-primary">$${item.subtotal.toLocaleString()}</div>
+                            <div class="text-[10px] text-muted">Cant: ${item.quantity}</div>
+                        </div>
+                    `;
+                    itemsListEl.appendChild(itemEl);
+                });
+            } else {
+                itemsListEl.innerHTML = `<p class="text-sm text-foreground/90 leading-relaxed">${order.description}</p>`;
+            }
 
             // Contact Info
             const contactContainer = document.getElementById('drawer-contact-info');
@@ -1257,6 +1301,7 @@
 
         // State
         let currentOrderId = null;
+        let currentOrderItems = [];
 
         // DOM Elements
         const modalBackdrop = document.getElementById('new-order-backdrop');
@@ -1303,6 +1348,10 @@
             document.getElementById('new-date').valueAsDate = new Date();
             document.getElementById('new-deposit').value = '';
             document.getElementById('new-product').value = '';
+            document.getElementById('new-phone').value = '';
+            document.getElementById('new-email').value = '';
+            currentOrderItems = [];
+            renderAddedItems();
             updateProductOptions();
         }
 
@@ -1452,21 +1501,109 @@
 
 
         function updateTotal() {
-            const product = document.getElementById('new-product').value;
-            const totalDisplay = document.getElementById('new-total');
             let total = 0;
+            currentOrderItems.forEach(item => total += item.subtotal);
 
+            document.getElementById('new-total').textContent = `$${total.toLocaleString()}`;
+            return total;
+        }
+
+        function calculateCurrentSelectionSubtotal() {
+            const product = document.getElementById('new-product').value;
+            if (!product) return 0;
+
+            let subtotal = 0;
             if (product === 'bouquet_vino') {
                 const type = document.querySelector('input[name="vinoflor_type"]:checked')?.value || 'essential';
-                total = PRICES.bouquet_vino[type];
+                subtotal = PRICES.bouquet_vino[type];
             } else {
                 const qtyInput = document.getElementById('new-quantity');
                 const qty = parseInt(qtyInput ? qtyInput.value : 1);
-                total = PRICES[product] * qty;
+                subtotal = PRICES[product] * qty;
+            }
+            return subtotal;
+        }
+
+        function addItemsToList() {
+            const product = document.getElementById('new-product').value;
+            if (!product) {
+                alert("Selecciona un producto primero.");
+                return;
             }
 
-            totalDisplay.textContent = `$${total.toLocaleString()}`;
-            return total;
+            const subtotal = calculateCurrentSelectionSubtotal();
+            let itemName = '';
+            let itemDetails = '';
+            let quantity = 1;
+
+            if (product === 'bouquet_vino') {
+                const type = document.querySelector('input[name="vinoflor_type"]:checked')?.value;
+                itemName = "Bouquet & Vino";
+                itemDetails = type.charAt(0).toUpperCase() + type.slice(1);
+            } else if (product === 'paquete_mini') {
+                quantity = parseInt(document.getElementById('new-quantity').value);
+                const options = Array.from(document.querySelectorAll('input[name="mini-option"]:checked')).map(cb => cb.value).join(', ');
+                itemName = 'Paquete Mini';
+                itemDetails = `Incluye: ${options || 'Ninguno'}`;
+            } else {
+                quantity = parseInt(document.getElementById('new-quantity').value);
+                itemName = product.replace(/_/g, ' ').replace(/\b\w/g, l => l.toUpperCase());
+                if (product === 'palomitas') itemDetails = document.getElementById('palomitas-sabor').value;
+                if (product === 'pretzels') itemDetails = document.getElementById('pretzels-tipo').value;
+                if (product === 'brownie') itemDetails = "4 piezas por caja";
+            }
+
+            currentOrderItems.push({
+                id: Date.now().toString(),
+                name: itemName,
+                details: itemDetails,
+                quantity: quantity,
+                subtotal: subtotal
+            });
+
+            // Reset selection but keep customer data
+            document.getElementById('new-product').value = '';
+            updateProductOptions();
+            renderAddedItems();
+            updateTotal();
+        }
+
+        function renderAddedItems() {
+            const container = document.getElementById('added-items-container');
+            const list = document.getElementById('added-items-list');
+
+            if (currentOrderItems.length === 0) {
+                container.classList.add('hidden');
+                return;
+            }
+
+            container.classList.remove('hidden');
+            list.innerHTML = '';
+
+            currentOrderItems.forEach((item, index) => {
+                const itemEl = document.createElement('div');
+                itemEl.className = 'flex justify-between items-center bg-secondary/30 p-3 rounded-lg border border-white/5';
+                itemEl.innerHTML = `
+                    <div class="flex-1 min-w-0">
+                        <div class="text-sm font-bold text-foreground truncate">${item.name} <span class="text-primary ml-1">${item.quantity > 1 ? `x${item.quantity}` : ''}</span></div>
+                        <div class="text-xs text-muted truncate">${item.details}</div>
+                    </div>
+                    <div class="flex items-center gap-3">
+                        <span class="text-sm font-bold text-foreground">$${item.subtotal.toLocaleString()}</span>
+                        <button onclick="removeItemFromList(${index})" class="p-1.5 hover:bg-danger/20 text-danger rounded-lg transition-colors">
+                            <i data-lucide="trash-2" class="w-4 h-4"></i>
+                        </button>
+                    </div>
+                `;
+                list.appendChild(itemEl);
+            });
+            lucide.createIcons();
+        }
+
+        function removeItemFromList(index) {
+            currentOrderItems.splice(index, 1);
+            renderAddedItems();
+            updateTotal();
         }
 
         function calculateTotal() {
@@ -1481,9 +1618,14 @@
             const product = document.getElementById('new-product').value;
             const total = calculateTotal();
 
-            if (!name || !dateInput || !product) {
-                alert('Por favor completa todos los campos obligatorios.');
+            if (!name || !dateInput || (currentOrderItems.length === 0 && !product)) {
+                alert('Por favor agrega al menos un producto al pedido.');
                 return;
+            }
+
+            // If user has a product selected but not added, add it automatically
+            if (currentOrderItems.length === 0 && product) {
+                addItemsToList();
             }
 
             const phone = document.getElementById('new-phone').value;
@@ -1522,7 +1664,8 @@
                 customerEmail: email,
                 deliveryDate: dateStr,
                 deliveryTime: timeStr,
-                description: desc,
+                description: currentOrderItems.map(i => `${i.quantity}x ${i.name}`).join(', '),
+                items: currentOrderItems,
                 totalAmount: total,
                 paidAmount: deposit,
                 status: editMode ? orders.find(o => o.id === currentOrderId).status : 'pedidos',
