--- a/index.html
+++ b/index.html
@@ -1417,7 +1417,7 @@
                                 <label class="block text-xs font-semibold text-muted uppercase tracking-wider mb-2">Sabor</label>
                                 <select id="palomitas-sabor" onchange="updateTotal()" class="w-full bg-secondary/50 border border-white/10 rounded-lg p-2.5 text-foreground focus:outline-none focus:border-primary text-sm">
                                     <option value="mantequilla">Mantequilla</option>
-                                    <option value="caramelo">Caramelo</option>
+                                    <option value="chicago">Chicago</option>
                                 </select>
                             </div>
                             <div>
@@ -1436,6 +1436,7 @@
                                 <label class="block text-xs font-semibold text-muted uppercase tracking-wider mb-2">Tipo de Chocolate</label>
                                 <select id="pretzels-tipo" onchange="updateTotal()" class="w-full bg-secondary/50 border border-white/10 rounded-lg p-2.5 text-foreground focus:outline-none focus:border-primary text-sm">
                                     <option value="chocolate">Chocolate</option>
+                                    <option value="chocolate_nuez">Chocolate con Nuez</option>
                                     <option value="blanco">Blanco</option>
                                 </select>
                             </div>
